--- a/templates/index.html
+++ b/templates/index.html
@@ -364,7 +364,10 @@
             <div class="right">
               <p class="title">FOLLOW US</p>
               <div class="medsos_ctr">
-                <a href="#" target="_blank">
+                <a
+                  href="https://www.instagram.com/tdm.indonesia/"
+                  target="_blank"
+                >
                   <img src="images/logo_instagram.png" alt="Instagram" />
                 </a>
                 <a href="https://wa.me/306945727892" target="_blank">
