--- a/templates/css/landing_page.css
+++ b/templates/css/landing_page.css
@@ -779,7 +779,7 @@ a {
     opacity: 1;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .container #aboutUs .logo_section {
     width: 110px;
   }
@@ -981,6 +981,7 @@ a {
   .container #gallery {
     padding-left: 16px;
     padding-right: 16px;
+    width: 100%;
   }
   .container #gallery .sentence_ctr {
     display: block;
@@ -1004,6 +1005,7 @@ a {
   }
   .container #gallery .sentence_ctr .gallery_ctr_1 {
     padding-right: 0;
+    margin-top: 20px;
   }
   .container #gallery .sentence_ctr .gallery_ctr_1 .left_side {
     justify-content: start;
